<resources>
    <string name="app_name">QuizApp</string>
    <string name="start_quiz_button_text">Start Quiz</string>
    <string name="question">Question :</string>
    <string name="previous">previous</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="alert">Alert</string>
    <string name="finsh_dialog_message">Are you sure want to finsh quiz?</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="total_question_format">Total Question: %s</string>
    <string name="total_correct_answer_format">Total Correct Answer: %s</string>
    <string name="total_time_taken">Total Time Taken: %s</string>
    <string name="retry_button_text">Retry</string>
    <string name="start_quiz_time_format">Total Time: %smin</string>
</resources>
