<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".result.ResultActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/tv_total_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_question_format"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_title"
                android:layout_margin="@dimen/window_margin"
                android:background="@android:color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/tv_correct_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_correct_answer_format"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_title"
                android:layout_margin="@dimen/window_margin"
                android:background="@android:color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_total_question"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/tv_time_taken"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_time_taken"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_title"
                android:layout_margin="@dimen/window_margin"
                android:background="@android:color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_correct_answer"
                android:gravity="center_horizontal" />

            <Button
                android:id="@+id/btn_retry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/retry_button_text"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_time_taken"
                android:background="@drawable/start_quiz_button_background"
                android:textColor="@android:color/white"
                android:layout_margin="@dimen/window_margin"
                android:gravity="center" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>