<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.quizapp.question.QuestionPageViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".question.QuestionPageActivity">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/question_header_size"
            android:text="@string/question"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_title"
            android:paddingStart="@dimen/window_margin"
            android:paddingEnd="@dimen/window_margin"
            android:gravity="center"
            android:background="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:id="@+id/tv_timer"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/question_header_size"
            android:text="@string/finish"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_title"
            android:paddingStart="@dimen/window_margin"
            android:paddingEnd="@dimen/window_margin"
            android:gravity="center"
            android:background="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_question_ans"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/question_header_size"
            android:layout_marginTop="@dimen/question_header_size">

            <TextView
                android:id="@+id/tv_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Who is the cricketer out of below ?"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_title"
                android:layout_margin="@dimen/window_margin"
                android:background="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
            <RadioGroup
                android:id="@+id/radio_group_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_question"
                android:layout_margin="@dimen/window_margin"
                >
                <RadioButton
                    android:id="@+id/radio_btn_option1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="option1"
                    android:paddingBottom="10dp"
                    />
                <RadioButton
                    android:id="@+id/radio_btn_option2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="option2"
                    android:paddingBottom="10dp"
                    />
                <RadioButton
                    android:id="@+id/radio_btn_option3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="option3"
                    android:paddingBottom="10dp"
                    />
                <RadioButton
                    android:id="@+id/radio_btn_option4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="option4"
                    />
            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_question_footer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/question_header_size"
            android:background="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >
            <TextView
                android:id="@+id/tv_question_counter"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/question_header_size"
                android:text="1/5"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_title"
                android:paddingStart="@dimen/window_margin"
                android:paddingEnd="@dimen/window_margin"
                android:gravity="center"
                android:background="@android:color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
            <ImageView
                android:id="@+id/iv_previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
                android:padding="@dimen/window_margin"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="@string/previous"
                />
            <ImageView
                android:id="@+id/iv_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:padding="@dimen/window_margin"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/next"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>